--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -11,7 +11,7 @@
   box-sizing: border-box; /* 1 */
   border-width: 0; /* 2 */
   border-style: solid; /* 2 */
-  border-color: #e5e7eb; /* 2 */
+  border-color: hsl(0, 0%, 42%); /* 2 */
 }
 
 ::before,
@@ -545,6 +545,9 @@ video {
   margin-left: auto;
   margin-right: auto;
 }
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
 .ml-auto {
   margin-left: auto;
 }
@@ -556,9 +559,6 @@ video {
 }
 .mt-3 {
   margin-top: 0.75rem;
-}
-.mb-5 {
-  margin-bottom: 1.25rem;
 }
 .\!mt-2 {
   margin-top: 0.5rem !important;
@@ -578,11 +578,25 @@ video {
 .flex {
   display: flex;
 }
+.grid {
+  display: grid;
+}
 .hidden {
   display: none;
 }
 .h-full {
   height: 100%;
+}
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
+.h-7 {
+  height: 1.75rem;
+}
+.h-3 {
+  height: 0.75rem;
 }
 .h-4 {
   height: 1rem;
@@ -611,11 +625,17 @@ video {
 .min-h-full {
   min-height: 100%;
 }
-.w-4 {
-  width: 1rem;
-}
 .w-full {
   width: 100%;
+}
+.w-7 {
+  width: 1.75rem;
+}
+.w-3 {
+  width: 0.75rem;
+}
+.w-4 {
+  width: 1rem;
 }
 .w-6 {
   width: 1.5rem;
@@ -627,6 +647,9 @@ video {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+}
+.w-\[300px\] {
+  width: 300px;
 }
 .w-\[44px\] {
   width: 44px;
@@ -657,6 +680,9 @@ video {
 .cursor-pointer {
   cursor: pointer;
 }
+.grid-cols-7 {
+  grid-template-columns: repeat(7, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
 }
@@ -678,17 +704,24 @@ video {
 .gap-1 {
   gap: 0.25rem;
 }
-.gap-6 {
-  gap: 1.5rem;
+.gap-2 {
+  gap: 0.5rem;
 }
 .gap-4 {
   gap: 1rem;
 }
+.gap-6 {
+  gap: 1.5rem;
+}
 .gap-3 {
   gap: 0.75rem;
 }
-.gap-2 {
-  gap: 0.5rem;
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+.gap-y-3 {
+  row-gap: 0.75rem;
 }
 .space-y-5 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -698,20 +731,23 @@ video {
 .self-center {
   align-self: center;
 }
+.overflow-hidden {
+  overflow: hidden;
+}
 .whitespace-nowrap {
   white-space: nowrap;
 }
 .rounded-lg {
   border-radius: 0.5rem;
 }
-.rounded-xl {
-  border-radius: 0.75rem;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 .rounded-full {
   border-radius: 9999px;
 }
-.rounded-md {
-  border-radius: 0.375rem;
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 .rounded-\[10px\] {
   border-radius: 10px;
@@ -727,75 +763,93 @@ video {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
+.border {
+  border-width: 1px;
+}
 .border-2 {
   border-width: 2px;
 }
+.border-t {
+  border-top-width: 1px;
+}
 .border-t-2 {
   border-top-width: 2px;
-}
-.border-slate-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: hsl(0 0% 67% / var(--tw-border-opacity));
+}
+.border-purple {
+  --tw-border-opacity: 1;
+  border-color: hsl(250 38% 46% / var(--tw-border-opacity));
+}
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: hsl(0 0% 42% / var(--tw-border-opacity));
+}
 .border-blue-400 {
   --tw-border-opacity: 1;
   border-color: rgb(96 165 250 / var(--tw-border-opacity));
-}
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-gray-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-.bg-slate-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
-}
-.bg-slate-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
-}
-.bg-teal-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
-}
-.bg-violet-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(139 92 246 / var(--tw-bg-opacity));
-}
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 .bg-slate-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
+.bg-black-100 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 13% / var(--tw-bg-opacity));
+}
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 100% / var(--tw-bg-opacity));
+}
+.bg-purple {
+  --tw-bg-opacity: 1;
+  background-color: hsl(250 38% 46% / var(--tw-bg-opacity));
+}
+.bg-black-200 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 9% / var(--tw-bg-opacity));
+}
+.bg-black-300 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 7% / var(--tw-bg-opacity));
+}
+.bg-green {
+  --tw-bg-opacity: 1;
+  background-color: hsl(129 60% 47% / var(--tw-bg-opacity));
+}
+.bg-yellow {
+  --tw-bg-opacity: 1;
+  background-color: hsl(37 96% 61% / var(--tw-bg-opacity));
+}
+.bg-red {
+  --tw-bg-opacity: 1;
+  background-color: hsl(1 96% 65% / var(--tw-bg-opacity));
+}
+.bg-gray-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+}
 .bg-gray-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
 .bg-lime-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(236 252 203 / var(--tw-bg-opacity));
 }
-.bg-yellow-100 {
+.bg-amber-700 {
   --tw-bg-opacity: 1;
-  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
+  background-color: rgb(180 83 9 / var(--tw-bg-opacity));
 }
 .bg-blue-200 {
   --tw-bg-opacity: 1;
@@ -809,40 +863,52 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(76 29 149 / var(--tw-bg-opacity));
 }
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
-}
 .bg-sky-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(7 89 133 / var(--tw-bg-opacity));
 }
-.bg-slate-500 {
+.bg-gray-200 {
   --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+  background-color: hsl(0 0% 42% / var(--tw-bg-opacity));
 }
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
-.from-black {
-  --tw-gradient-from: #000;
-  --tw-gradient-to: rgb(0 0 0 / 0);
+.from-black-300 {
+  --tw-gradient-from: hsl(0, 0%, 7%);
+  --tw-gradient-to: hsl(0 0% 7% / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.from-black-100 {
+  --tw-gradient-from: hsl(0, 0%, 13%);
+  --tw-gradient-to: hsl(0 0% 13% / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.via-black-200 {
+  --tw-gradient-to: hsl(0 0% 9% / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), hsl(0, 0%, 9%), var(--tw-gradient-to);
+}
+.via-black-300 {
+  --tw-gradient-to: hsl(0 0% 7% / 0);
+  --tw-gradient-stops: var(--tw-gradient-from), hsl(0, 0%, 7%), var(--tw-gradient-to);
 }
 .to-slate-800 {
   --tw-gradient-to: #1e293b;
 }
-.fill-white {
-  fill: #fff;
+.to-purple {
+  --tw-gradient-to: hsl(250, 38%, 46%);
 }
-.stroke-slate-900 {
-  stroke: #0f172a;
+.fill-white {
+  fill: hsl(0, 0%, 100%);
 }
 .stroke-white {
-  stroke: #fff;
+  stroke: hsl(0, 0%, 100%);
 }
-.stroke-red-500 {
-  stroke: #ef4444;
+.stroke-red {
+  stroke: hsl(1, 96%, 65%);
+}
+.stroke-gray-200 {
+  stroke: hsl(0, 0%, 42%);
 }
 .stroke-\[3\] {
   stroke-width: 3;
@@ -853,6 +919,9 @@ video {
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
+}
+.p-5 {
+  padding: 1.25rem;
 }
 .p-1 {
   padding: 0.25rem;
@@ -914,23 +983,29 @@ video {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+.pt-5 {
+  padding-top: 1.25rem;
+}
 .pt-9 {
   padding-top: 2.25rem;
 }
 .pb-1 {
   padding-bottom: 0.25rem;
 }
+.pt-3 {
+  padding-top: 0.75rem;
+}
 .pb-4 {
   padding-bottom: 1rem;
 }
-.pb-3 {
-  padding-bottom: 0.75rem;
+.pt-10 {
+  padding-top: 2.5rem;
 }
 .pt-\[68px\] {
   padding-top: 68px;
-}
-.pt-5 {
-  padding-top: 1.25rem;
 }
 .pt-20 {
   padding-top: 5rem;
@@ -978,6 +1053,14 @@ video {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -985,10 +1068,6 @@ video {
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
-}
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
 }
 .text-\[32px\] {
   font-size: 32px;
@@ -1000,10 +1079,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 .font-medium {
   font-weight: 500;
@@ -1024,49 +1099,56 @@ video {
   --tw-numeric-spacing: tabular-nums;
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
 }
-.text-slate-900 {
-  --tw-text-opacity: 1;
-  color: rgb(15 23 42 / var(--tw-text-opacity));
+.tracking-wide {
+  letter-spacing: 0.025em;
 }
 .text-white {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: hsl(0 0% 100% / var(--tw-text-opacity));
 }
-.text-red-500 {
+.text-gray-100 {
   --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
+  color: hsl(0 0% 67% / var(--tw-text-opacity));
 }
-.text-green-600 {
+.text-blue-500 {
   --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
-.text-black {
+.text-gray-200 {
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: hsl(0 0% 42% / var(--tw-text-opacity));
 }
-.text-gray-500 {
+.text-black-300 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: hsl(0 0% 7% / var(--tw-text-opacity));
 }
-.text-gray-700 {
+.text-red {
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
-}
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
+  color: hsl(1 96% 65% / var(--tw-text-opacity));
 }
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
-.text-slate-500 {
+.text-gray-300 {
   --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+.text-green {
+  --tw-text-opacity: 1;
+  color: hsl(129 60% 47% / var(--tw-text-opacity));
+}
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-purple {
+  --tw-text-opacity: 1;
+  color: hsl(250 38% 46% / var(--tw-text-opacity));
 }
 .text-slate-700 {
   --tw-text-opacity: 1;
@@ -1080,13 +1162,27 @@ video {
   opacity: 0.4;
 }
 .shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  --tw-shadow: var(--shadow-elevation-medium);
+  --tw-shadow-colored: var(--shadow-elevation-medium);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-sm {
+  --tw-shadow: var(--shadow-elevation-low);
+  --tw-shadow-colored: var(--shadow-elevation-low);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+.outline {
+  outline-style: solid;
+}
+.outline-2 {
+  outline-width: 2px;
+}
+.outline-purple {
+  outline-color: hsl(250, 38%, 46%);
 }
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1116,32 +1212,57 @@ video {
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
-.placeholder\:text-gray-500::-moz-placeholder {
+.placeholder\:text-gray-200::-moz-placeholder {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: hsl(0 0% 42% / var(--tw-text-opacity));
 }
-.placeholder\:text-gray-500::placeholder {
+.placeholder\:text-gray-200::placeholder {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: hsl(0 0% 42% / var(--tw-text-opacity));
 }
-.focus-within\:outline-slate-500:focus-within {
-  outline-color: #64748b;
-}
-.hover\:bg-gray-700:hover {
+.odd\:bg-black-200:nth-child(odd) {
   --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  background-color: hsl(0 0% 9% / var(--tw-bg-opacity));
+}
+.focus-within\:border-2:focus-within {
+  border-width: 2px;
+}
+.focus-within\:border-purple:focus-within {
+  --tw-border-opacity: 1;
+  border-color: hsl(250 38% 46% / var(--tw-border-opacity));
+}
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 67% / var(--tw-bg-opacity));
+}
+.hover\:bg-black-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 13% / var(--tw-bg-opacity));
+}
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: hsl(0 0% 42% / var(--tw-bg-opacity));
 }
 .hover\:bg-gray-900:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
-.focus\:bg-gray-500:focus {
+.hover\:opacity-90:hover {
+  opacity: 0.9;
+}
+.focus\:bg-gray-200:focus {
   --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+  background-color: hsl(0 0% 42% / var(--tw-bg-opacity));
 }
 .focus\:\!outline-none:focus {
   outline: 2px solid transparent !important;
   outline-offset: 2px !important;
+}
+.focus\:outline-offset-1:focus {
+  outline-offset: 1px;
+}
+.focus\:outline-purple:focus {
+  outline-color: hsl(250, 38%, 46%);
 }
 .focus\:ring-blue-500:focus {
   --tw-ring-opacity: 1;
@@ -1157,8 +1278,8 @@ video {
 .focus-visible\:outline-2:focus-visible {
   outline-width: 2px;
 }
-.focus-visible\:outline-slate-500:focus-visible {
-  outline-color: #64748b;
+.focus-visible\:outline-purple:focus-visible {
+  outline-color: hsl(250, 38%, 46%);
 }
 .disabled\:text-slate-300:disabled {
   --tw-text-opacity: 1;
