--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -517,17 +517,17 @@ video {
 .relative {
   position: relative;
 }
-.inset-0 {
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-}
 .-inset-1 {
   top: -0.25rem;
   right: -0.25rem;
   bottom: -0.25rem;
   left: -0.25rem;
+}
+.inset-0 {
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
 }
 .top-0 {
   top: 0px;
@@ -538,8 +538,23 @@ video {
 .right-0 {
   right: 0px;
 }
+.top-1 {
+  top: 0.25rem;
+}
+.bottom-0 {
+  bottom: 0px;
+}
+.isolate {
+  isolation: isolate;
+}
 .z-\[9999\] {
   z-index: 9999;
+}
+.z-10 {
+  z-index: 10;
+}
+.z-20 {
+  z-index: 20;
 }
 .mx-auto {
   margin-left: auto;
@@ -572,6 +587,33 @@ video {
 .mt-8 {
   margin-top: 2rem;
 }
+.mt-16 {
+  margin-top: 4rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mr-8 {
+  margin-right: 2rem;
+}
+.mr-6 {
+  margin-right: 1.5rem;
+}
+.mr-4 {
+  margin-right: 1rem;
+}
+.-mt-24 {
+  margin-top: -6rem;
+}
+.-mt-48 {
+  margin-top: -12rem;
+}
+.ml-4 {
+  margin-left: 1rem;
+}
 .block {
   display: block;
 }
@@ -581,11 +623,17 @@ video {
 .grid {
   display: grid;
 }
+.contents {
+  display: contents;
+}
 .hidden {
   display: none;
 }
 .h-full {
   height: 100%;
+}
+.h-\[44px\] {
+  height: 44px;
 }
 .h-fit {
   height: -webkit-fit-content;
@@ -601,14 +649,14 @@ video {
 .h-4 {
   height: 1rem;
 }
+.h-24 {
+  height: 6rem;
+}
 .h-6 {
   height: 1.5rem;
 }
 .h-5 {
   height: 1.25rem;
-}
-.h-\[44px\] {
-  height: 44px;
 }
 .h-\[10px\] {
   height: 10px;
@@ -624,6 +672,9 @@ video {
 }
 .min-h-full {
   min-height: 100%;
+}
+.w-\[44px\] {
+  width: 44px;
 }
 .w-full {
   width: 100%;
@@ -651,9 +702,6 @@ video {
 .w-\[300px\] {
   width: 300px;
 }
-.w-\[44px\] {
-  width: 44px;
-}
 .w-\[10px\] {
   width: 10px;
 }
@@ -677,8 +725,24 @@ video {
 .flex-1 {
   flex: 1 1 0%;
 }
+.scale-105 {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.scale-110 {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .cursor-pointer {
   cursor: pointer;
+}
+.cursor-not-allowed {
+  cursor: not-allowed;
+}
+.scroll-mt-48 {
+  scroll-margin-top: 12rem;
 }
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
@@ -692,6 +756,9 @@ video {
 .items-center {
   align-items: center;
 }
+.items-baseline {
+  align-items: baseline;
+}
 .justify-center {
   justify-content: center;
 }
@@ -700,6 +767,9 @@ video {
 }
 .justify-evenly {
   justify-content: space-evenly;
+}
+.gap-3 {
+  gap: 0.75rem;
 }
 .gap-1 {
   gap: 0.25rem;
@@ -713,9 +783,6 @@ video {
 .gap-6 {
   gap: 1.5rem;
 }
-.gap-3 {
-  gap: 0.75rem;
-}
 .gap-x-4 {
   -moz-column-gap: 1rem;
        column-gap: 1rem;
@@ -728,6 +795,11 @@ video {
   margin-top: calc(1.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1.25rem * var(--tw-space-y-reverse));
 }
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
 .self-center {
   align-self: center;
 }
@@ -737,8 +809,14 @@ video {
 .whitespace-nowrap {
   white-space: nowrap;
 }
+.whitespace-pre-wrap {
+  white-space: pre-wrap;
+}
 .rounded-lg {
   border-radius: 0.5rem;
+}
+.rounded-\[10px\] {
+  border-radius: 10px;
 }
 .rounded-md {
   border-radius: 0.375rem;
@@ -748,9 +826,6 @@ video {
 }
 .rounded-xl {
   border-radius: 0.75rem;
-}
-.rounded-\[10px\] {
-  border-radius: 10px;
 }
 .rounded-sm {
   border-radius: 0.125rem;
@@ -763,17 +838,24 @@ video {
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
+.border-2 {
+  border-width: 2px;
+}
 .border {
   border-width: 1px;
 }
-.border-2 {
-  border-width: 2px;
+.border-\[3px\] {
+  border-width: 3px;
 }
 .border-t {
   border-top-width: 1px;
 }
 .border-t-2 {
   border-top-width: 2px;
+}
+.border-blue-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(96 165 250 / var(--tw-border-opacity));
 }
 .border-gray-300 {
   --tw-border-opacity: 1;
@@ -791,9 +873,9 @@ video {
   --tw-border-opacity: 1;
   border-color: hsl(0 0% 42% / var(--tw-border-opacity));
 }
-.border-blue-400 {
+.border-green {
   --tw-border-opacity: 1;
-  border-color: rgb(96 165 250 / var(--tw-border-opacity));
+  border-color: hsl(129 60% 47% / var(--tw-border-opacity));
 }
 .bg-slate-200 {
   --tw-bg-opacity: 1;
@@ -839,10 +921,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
 .bg-lime-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(236 252 203 / var(--tw-bg-opacity));
@@ -867,9 +945,9 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(7 89 133 / var(--tw-bg-opacity));
 }
-.bg-gray-200 {
+.bg-emerald-300 {
   --tw-bg-opacity: 1;
-  background-color: hsl(0 0% 42% / var(--tw-bg-opacity));
+  background-color: rgb(110 231 183 / var(--tw-bg-opacity));
 }
 .bg-gradient-to-tr {
   background-image: linear-gradient(to top right, var(--tw-gradient-stops));
@@ -879,21 +957,9 @@ video {
   --tw-gradient-to: hsl(0 0% 7% / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
-.from-black-100 {
-  --tw-gradient-from: hsl(0, 0%, 13%);
-  --tw-gradient-to: hsl(0 0% 13% / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
 .via-black-200 {
   --tw-gradient-to: hsl(0 0% 9% / 0);
   --tw-gradient-stops: var(--tw-gradient-from), hsl(0, 0%, 9%), var(--tw-gradient-to);
-}
-.via-black-300 {
-  --tw-gradient-to: hsl(0 0% 7% / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), hsl(0, 0%, 7%), var(--tw-gradient-to);
-}
-.to-slate-800 {
-  --tw-gradient-to: #1e293b;
 }
 .to-purple {
   --tw-gradient-to: hsl(250, 38%, 46%);
@@ -923,6 +989,9 @@ video {
 .p-5 {
   padding: 1.25rem;
 }
+.p-\[6px\] {
+  padding: 6px;
+}
 .p-1 {
   padding: 0.25rem;
 }
@@ -931,9 +1000,6 @@ video {
 }
 .p-2 {
   padding: 0.5rem;
-}
-.p-\[6px\] {
-  padding: 6px;
 }
 .py-3 {
   padding-top: 0.75rem;
@@ -982,6 +1048,10 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .pb-3 {
   padding-bottom: 0.75rem;
@@ -1040,6 +1110,15 @@ video {
 .pb-5 {
   padding-bottom: 1.25rem;
 }
+.pr-4 {
+  padding-right: 1rem;
+}
+.pb-24 {
+  padding-bottom: 6rem;
+}
+.pb-48 {
+  padding-bottom: 12rem;
+}
 .text-left {
   text-align: left;
 }
@@ -1053,6 +1132,10 @@ video {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1065,10 +1148,6 @@ video {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
 .text-\[32px\] {
   font-size: 32px;
 }
@@ -1079,6 +1158,9 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+.text-\[10px\] {
+  font-size: 10px;
 }
 .font-medium {
   font-weight: 500;
@@ -1094,6 +1176,9 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.italic {
+  font-style: italic;
 }
 .tabular-nums {
   --tw-numeric-spacing: tabular-nums;
@@ -1138,14 +1223,6 @@ video {
   --tw-text-opacity: 1;
   color: hsl(129 60% 47% / var(--tw-text-opacity));
 }
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
 .text-purple {
   --tw-text-opacity: 1;
   color: hsl(250 38% 46% / var(--tw-text-opacity));
@@ -1157,6 +1234,9 @@ video {
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
+}
+.opacity-50 {
+  opacity: 0.5;
 }
 .opacity-40 {
   opacity: 0.4;
@@ -1175,14 +1255,26 @@ video {
   outline: 2px solid transparent;
   outline-offset: 2px;
 }
-.outline {
-  outline-style: solid;
+.ring {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
-.outline-2 {
-  outline-width: 2px;
+.ring-green {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: hsl(129 60% 47% / var(--tw-ring-opacity));
 }
-.outline-purple {
-  outline-color: hsl(250, 38%, 46%);
+.blur-md {
+  --tw-blur: blur(12px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.blur-\[8px\] {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.blur-sm {
+  --tw-blur: blur(4px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1206,11 +1298,19 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .duration-100 {
   transition-duration: 100ms;
 }
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+.will-change-transform {
+  will-change: transform;
 }
 .placeholder\:text-gray-200::-moz-placeholder {
   --tw-text-opacity: 1;
@@ -1224,12 +1324,14 @@ video {
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 9% / var(--tw-bg-opacity));
 }
-.focus-within\:border-2:focus-within {
-  border-width: 2px;
+.valid\:ring-green:valid {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: hsl(129 60% 47% / var(--tw-ring-opacity));
 }
-.focus-within\:border-purple:focus-within {
-  --tw-border-opacity: 1;
-  border-color: hsl(250 38% 46% / var(--tw-border-opacity));
+.hover\:scale-125:hover {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
@@ -1243,30 +1345,30 @@ video {
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 42% / var(--tw-bg-opacity));
 }
-.hover\:bg-gray-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
 .hover\:opacity-90:hover {
   opacity: 0.9;
+}
+.focus\:border:focus {
+  border-width: 1px;
+}
+.focus\:border-white:focus {
+  --tw-border-opacity: 1;
+  border-color: hsl(0 0% 100% / var(--tw-border-opacity));
 }
 .focus\:bg-gray-200:focus {
   --tw-bg-opacity: 1;
   background-color: hsl(0 0% 42% / var(--tw-bg-opacity));
 }
-.focus\:\!outline-none:focus {
-  outline: 2px solid transparent !important;
-  outline-offset: 2px !important;
+.focus\:opacity-50:focus {
+  opacity: 0.5;
 }
-.focus\:outline-offset-1:focus {
-  outline-offset: 1px;
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
-.focus\:outline-purple:focus {
-  outline-color: hsl(250, 38%, 46%);
-}
-.focus\:ring-blue-500:focus {
+.focus\:ring-purple:focus {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(59 130 246 / var(--tw-ring-opacity));
+  --tw-ring-color: hsl(250 38% 46% / var(--tw-ring-opacity));
 }
 .focus-visible\:\!outline-none:focus-visible {
   outline: 2px solid transparent !important;
@@ -1281,9 +1383,15 @@ video {
 .focus-visible\:outline-purple:focus-visible {
   outline-color: hsl(250, 38%, 46%);
 }
+.active\:opacity-50:active {
+  opacity: 0.5;
+}
 .disabled\:text-slate-300:disabled {
   --tw-text-opacity: 1;
   color: rgb(203 213 225 / var(--tw-text-opacity));
+}
+.group:focus .group-focus\:block {
+  display: block;
 }
 @media (min-width: 640px) {
 
